implement property functionalities
